[gd_scene load_steps=9 format=3 uid="uid://b64k8v4cxdtth"]

[ext_resource type="PackedScene" uid="uid://mnbjulnhuos" path="res://environment/Level.tscn" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://4xq8kwuy4qx4" path="res://cursor/cursor.tscn" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://svv2d8r307bg" path="res://gamemanager/game_board.gd" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://d373hbs2371ef" path="res://unit/unit_overlay.tscn" id="5_5vw27"]
[ext_resource type="PackedScene" uid="uid://cp4jrwqcmtgr7" path="res://unit/Player/player.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://bslui3vkeume6" path="res://unit/Enemy/enemy.tscn" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://e85s3dhsowhe" path="res://unit/unit_path.tscn" id="6_kek77"]
[ext_resource type="Script" uid="uid://budt5xd5x2bi" path="res://gamemanager/turn_manager.gd" id="8_5vw27"]

[node name="main" type="Node2D"]

[node name="Level" parent="." instance=ExtResource("1_h2yge")]
unique_name_in_owner = true

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2_272bh")

[node name="Unit_overlay" parent="GameBoard" instance=ExtResource("5_5vw27")]
unique_name_in_owner = true

[node name="UnitPath" parent="GameBoard" instance=ExtResource("6_kek77")]
unique_name_in_owner = true

[node name="Cursor" parent="GameBoard" instance=ExtResource("2_1bvp3")]

[node name="Player" parent="GameBoard" instance=ExtResource("6_7mycd")]
position = Vector2(56, 16)

[node name="Enemy" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(208, 64)
move_speed = 200

[node name="Enemy3" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(312, 24)
move_speed = 200

[node name="Enemy4" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(32, 288)
move_speed = 200

[node name="Enemy2" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(272, 144)
move_speed = 200

[node name="TurnManager" type="Node" parent="GameBoard"]
unique_name_in_owner = true
script = ExtResource("8_5vw27")

[node name="Enemy5" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(368, 288)

[node name="Enemy6" parent="GameBoard" instance=ExtResource("6_272bh")]
position = Vector2(16, 80)

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_moved"]
[connection signal="player_turn_finished" from="GameBoard/TurnManager" to="GameBoard" method="_on_turn_manager_player_turn_finished"]
[connection signal="player_turned" from="GameBoard/TurnManager" to="GameBoard" method="_on_turn_manager_player_turned"]
